# onitama

./: .gitignore  README.md  onitama.cabal
main/: onitama.hs
src/Onitama/: Card.hs  Data.hs  Game.hs
